feat: SRE Prometheus/Grafana setup steps.